[gd_scene load_steps=22 format=3 uid="uid://db8dg0vnmu7rl"]

[ext_resource type="Script" path="res://main.gd" id="1_754ya"]
[ext_resource type="PackedScene" uid="uid://dylos7cva3arc" path="res://glb/Kaya_MultiPose.glb" id="2_1r7gq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fdvyy"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_wn6w4"]
material = SubResource("StandardMaterial3D_fdvyy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mi288"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.501961)

[sub_resource type="BoxMesh" id="BoxMesh_n8qgp"]
material = SubResource("StandardMaterial3D_mi288")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m5ark"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.8)

[sub_resource type="SphereMesh" id="SphereMesh_7i3qm"]
material = SubResource("StandardMaterial3D_m5ark")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_70r8c"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_eaew6"]
material = SubResource("StandardMaterial3D_70r8c")

[sub_resource type="BoxShape3D" id="BoxShape3D_uchbr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qxks3"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_23tb3"]
material = SubResource("StandardMaterial3D_qxks3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vtohu"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ilwq6"]
material = SubResource("StandardMaterial3D_vtohu")

[sub_resource type="PlaneMesh" id="PlaneMesh_3wi2c"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r7jps"]
animation = &"pose2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_162h3"]
animation = &"pose3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cjni2"]
animation = &"pose1"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_ygpro"]
input_count = 3
xfade_time = 0.25
input_0/name = "pose1"
input_0/auto_advance = true
input_1/name = "pose2"
input_1/auto_advance = true
input_2/name = "pose3"
input_2/auto_advance = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_g426q"]
graph_offset = Vector2(-230, 42)
nodes/Animation/node = SubResource("AnimationNodeAnimation_cjni2")
nodes/Animation/position = Vector2(100, 80)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_r7jps")
"nodes/Animation 2/position" = Vector2(100, 200)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_162h3")
"nodes/Animation 3/position" = Vector2(100, 320)
nodes/Transition/node = SubResource("AnimationNodeTransition_ygpro")
nodes/Transition/position = Vector2(320, 80)
nodes/output/position = Vector2(480, 80)
node_connections = [&"output", 0, &"Transition", &"Transition", 0, &"Animation", &"Transition", 1, &"Animation 2", &"Transition", 2, &"Animation 3"]

[node name="Main" type="Node3D"]
script = ExtResource("1_754ya")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="XRController3D_Right" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
pose = &"aim"

[node name="Controller" type="MeshInstance3D" parent="XROrigin3D/XRController3D_Right"]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, 0, 0, 0)
mesh = SubResource("SphereMesh_wn6w4")

[node name="RayCast3D" type="RayCast3D" parent="XROrigin3D/XRController3D_Right"]
target_position = Vector3(0, 0, -1000)

[node name="RayLine" type="MeshInstance3D" parent="XROrigin3D/XRController3D_Right"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 1000, 0, 0, -500)
mesh = SubResource("BoxMesh_n8qgp")

[node name="HitPoint" type="MeshInstance3D" parent="XROrigin3D/XRController3D_Right"]
transform = Transform3D(0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 0, 0, -0.5)
mesh = SubResource("SphereMesh_7i3qm")

[node name="BlueBox" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.25, 0.5, -0.75)
mesh = SubResource("BoxMesh_eaew6")

[node name="StaticBody3D" type="StaticBody3D" parent="BlueBox"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlueBox/StaticBody3D"]
shape = SubResource("BoxShape3D_uchbr")

[node name="YellowBox" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.5, -0.75)
mesh = SubResource("BoxMesh_23tb3")

[node name="StaticBody3D" type="StaticBody3D" parent="YellowBox"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="YellowBox/StaticBody3D"]
shape = SubResource("BoxShape3D_uchbr")

[node name="RedBox" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.25, 0.5, -0.75)
mesh = SubResource("BoxMesh_ilwq6")

[node name="StaticBody3D" type="StaticBody3D" parent="RedBox"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RedBox/StaticBody3D"]
shape = SubResource("BoxShape3D_uchbr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 5, 0)
shadow_enabled = true

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, -2)
mesh = SubResource("PlaneMesh_3wi2c")

[node name="Kaya_MultiPose" parent="." instance=ExtResource("2_1r7gq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Skeleton3D" parent="Kaya_MultiPose/pose1" index="0"]
bones/0/position = Vector3(-11.9462, -0.718691, -65.0961)
bones/0/rotation = Quaternion(-0.717067, -0.0438755, -0.17943, 0.672082)
bones/1/position = Vector3(-2.80762e-07, -4.69438e-06, 1.26291e-07)
bones/2/rotation = Quaternion(-0.302077, 0.192865, 0.211681, 0.909255)
bones/3/rotation = Quaternion(0.490498, -0.0766532, 0.0320169, 0.867474)
bones/4/rotation = Quaternion(-0.223165, -0.236271, 0.0397148, 0.944879)
bones/7/rotation = Quaternion(-0.0929845, -0.236526, 0.167364, 0.952575)
bones/8/rotation = Quaternion(0.35482, 0.0678175, -0.0285636, 0.932034)
bones/9/rotation = Quaternion(-0.217353, 0.0400909, -0.0432143, 0.974311)
bones/12/rotation = Quaternion(0.0873763, -0.035904, 0.0449031, 0.994515)
bones/13/position = Vector3(0.146996, 13.8374, 0.53879)
bones/13/rotation = Quaternion(0.0102414, -0.00862201, 0.00300349, 0.999906)
bones/14/rotation = Quaternion(0.0105235, -0.0082977, 0.00311979, 0.999905)
bones/15/rotation = Quaternion(0.0561138, -0.00176675, -0.00685287, 0.998399)
bones/16/position = Vector3(-3.13458e-07, 6.59937, 1.38586)
bones/16/rotation = Quaternion(-0.0319903, -0.0370504, 0.0299774, 0.998351)
bones/26/rotation = Quaternion(0.053359, -0.0463956, 0.148203, 0.986426)
bones/27/rotation = Quaternion(-0.0624705, -0.01357, 0.00107414, 0.997954)
bones/28/position = Vector3(21.9246, 4.84048e-06, -1.35192)
bones/28/rotation = Quaternion(-0.00485776, -0.847498, 0.241494, 0.472656)
bones/29/position = Vector3(33.8671, -0.000332413, -0.895184)
bones/29/rotation = Quaternion(-0.010321, -0.0722994, -0.142954, 0.987031)
bones/30/position = Vector3(6.80074, -1.61021, 3.62444)
bones/30/rotation = Quaternion(0.117462, 0.159092, -0.0724079, 0.977573)
bones/31/position = Vector3(2.13311, -1.04756, 2.19725)
bones/31/rotation = Quaternion(0.0269731, 0.283819, 0.200454, 0.937303)
bones/32/position = Vector3(2.93979, -1.95519, 1.23905)
bones/33/position = Vector3(14.1848, 0.83794, 3.77897)
bones/33/rotation = Quaternion(-0.155484, -0.142638, -0.414205, 0.885389)
bones/34/position = Vector3(3.45469, -0.747024, -0.349037)
bones/34/rotation = Quaternion(-0.0560903, -0.00910096, -0.608473, 0.791537)
bones/35/position = Vector3(2.70831, -1.0006, -0.20066)
bones/36/position = Vector3(13.7653, 0.551874, -0.0585117)
bones/36/rotation = Quaternion(-0.0346671, -0.0309643, -0.433972, 0.899726)
bones/37/position = Vector3(3.32931, -0.830413, -0.218274)
bones/37/rotation = Quaternion(-0.0467406, -0.0177097, -0.638431, 0.768054)
bones/38/position = Vector3(3.52182, -1.08227, -0.230448)
bones/39/position = Vector3(13.9694, -0.122358, -3.062)
bones/39/rotation = Quaternion(0.0498362, 0.0327021, -0.468787, 0.881298)
bones/40/position = Vector3(3.06306, -0.760189, -0.203343)
bones/40/rotation = Quaternion(-0.0562015, -0.0223087, -0.688435, 0.722774)
bones/41/position = Vector3(3.20041, -0.86192, -0.256634)
bones/42/position = Vector3(13.1346, -0.420987, -5.72657)
bones/42/rotation = Quaternion(0.0728282, 0.0778948, -0.443425, 0.889945)
bones/43/position = Vector3(2.70588, -0.872286, -0.187254)
bones/43/rotation = Quaternion(-0.0569677, -0.019658, -0.656897, 0.751568)
bones/44/position = Vector3(2.65309, -0.882455, -0.224707)
bones/45/position = Vector3(6.61106, -0.646641, 0.631121)
bones/46/rotation = Quaternion(0.0329264, -0.00914253, -0.00745991, 0.999388)
bones/47/position = Vector3(-9.82555, 2.50626, -1.59744)
bones/47/rotation = Quaternion(0.329308, 0.168394, -0.0813397, 0.925518)
bones/48/position = Vector3(-21.9246, -3.61439e-06, -1.35193)
bones/48/rotation = Quaternion(-0.169111, 0.807572, -0.00744874, 0.564954)
bones/49/position = Vector3(-33.8671, -0.000326824, -0.895183)
bones/49/rotation = Quaternion(0.48364, -0.0235018, -0.119696, 0.866725)
bones/50/position = Vector3(-6.80074, -1.61021, 3.62445)
bones/50/rotation = Quaternion(0.0295126, -0.111247, 0.106398, 0.98764)
bones/51/position = Vector3(-2.13311, -1.04756, 2.19725)
bones/51/rotation = Quaternion(0.0572097, -0.343878, -0.200263, 0.915625)
bones/52/position = Vector3(-2.93978, -1.9552, 1.23905)
bones/53/position = Vector3(-14.1848, 0.837931, 3.77897)
bones/53/rotation = Quaternion(-0.139335, 0.139935, 0.415487, 0.887905)
bones/54/position = Vector3(-3.45469, -0.747026, -0.349035)
bones/54/rotation = Quaternion(-0.0602704, 0.0226124, 0.611247, 0.788818)
bones/55/position = Vector3(-2.70831, -1.0006, -0.200663)
bones/56/position = Vector3(-13.7653, 0.551862, -0.0585076)
bones/56/rotation = Quaternion(-0.0350428, 0.0427775, 0.424928, 0.903536)
bones/57/position = Vector3(-3.32931, -0.830415, -0.218266)
bones/57/rotation = Quaternion(-0.0479377, 0.0295284, 0.606519, 0.793073)
bones/58/position = Vector3(-3.52181, -1.08228, -0.230452)
bones/59/position = Vector3(-13.9694, -0.122369, -3.062)
bones/59/rotation = Quaternion(0.0207969, -0.00117784, 0.445075, 0.895251)
bones/60/position = Vector3(-3.06307, -0.760181, -0.203342)
bones/60/rotation = Quaternion(-0.0566577, 0.034906, 0.650174, 0.756866)
bones/61/position = Vector3(-3.20041, -0.861923, -0.256621)
bones/62/position = Vector3(-13.1346, -0.420989, -5.72657)
bones/62/rotation = Quaternion(0.024307, -0.00376449, 0.397876, 0.917109)
bones/63/position = Vector3(-2.70589, -0.872293, -0.187247)
bones/63/rotation = Quaternion(-0.0560227, 0.0306816, 0.597682, 0.799185)
bones/64/position = Vector3(-2.65309, -0.882448, -0.22469)
bones/65/position = Vector3(-6.61105, -0.646642, 0.63111)
bones/71/position = Vector3(0.2892, -7.1719, -1.28449)
bones/75/position = Vector3(-0.293549, -6.08138, -0.91014)

[node name="OccupyGuy_Body_Mesh002" parent="Kaya_MultiPose/pose1/Skeleton3D" index="0"]
lod_bias = 10.0

[node name="OccupyGuy_BrowsAnimGeo002" parent="Kaya_MultiPose/pose1/Skeleton3D" index="1"]
lod_bias = 40.0

[node name="OccupyGuy_EyesAnimGeo002" parent="Kaya_MultiPose/pose1/Skeleton3D" index="2"]
lod_bias = 30.0

[node name="OccupyGuy_MouthAnimGeo002" parent="Kaya_MultiPose/pose1/Skeleton3D" index="3"]
lod_bias = 15.0

[node name="AnimationPlayer" parent="Kaya_MultiPose" index="1"]
autoplay = "pose1"

[node name="AnimationTree" type="AnimationTree" parent="Kaya_MultiPose"]
tree_root = SubResource("AnimationNodeBlendTree_g426q")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Transition/current = 0

[connection signal="button_pressed" from="XROrigin3D/XRController3D_Right" to="." method="_on_xr_controller_3d_right_button_pressed"]
[connection signal="button_released" from="XROrigin3D/XRController3D_Right" to="." method="_on_xr_controller_3d_right_button_released"]

[editable path="Kaya_MultiPose"]
